@@ -95,4 +95,34 @@ DeviceList DeviceInfo::alsaDevices() {
 	return l;
 }
 
+DeviceList DeviceInfo::xvAdaptors() {
+	qDebug("DeviceInfo::xvAdaptors");
+
+	DeviceList l;
+	QRegExp rx_device("^.*Adaptor #([0-9]+): \"(.*)\"");
+
+	QProcess p;
+	p.setProcessChannelMode( QProcess::MergedChannels );
+	p.setEnvironment( QProcess::systemEnvironment() << "LC_ALL=C" );
+	p.start("xvinfo");
+
+	if (p.waitForFinished()) {
+		QByteArray line;
+		while (p.canReadLine()) {
+			line = p.readLine();
+			qDebug("DeviceInfo::xvAdaptors: '%s'", line.constData());
+			if ( rx_device.indexIn(line) > -1 ) {
+				QString id = rx_device.cap(1);
+				QString desc = rx_device.cap(2);
+				qDebug("DeviceInfo::xvAdaptors: found adaptor: '%s' '%s'", id.toUtf8().constData(), desc.toUtf8().constData());
+				l.append( DeviceData(id, desc) );
+			}
+		}
+	} else {
+		qDebug("DeviceInfo::xvAdaptors: could not start xvinfo, error %d", p.error());
+	}
+
+	return l;
+}
+
 #endif
